--- a/english.html
+++ b/english.html
@@ -8503,7 +8503,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217125807877" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200217181101133" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200217183443922" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8512,7 +8512,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The estate`s kitchen]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[With Yoyo in Amsterdam]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8532,7 +8532,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217180652212" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217183248265" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9248,13 +9248,13 @@ This is [[David Byrne|http://davidbyrne.com/]].
 
  &lt;&lt;heblink [[חלומות שחלמנו]]&gt;&gt;</pre>
 </div>
-<div created="20200217175503049" modified="20200217175750962" tags="[[The estate]]" title="Edith">
+<div created="20200217175503049" modified="20200217182615287" tags="[[The estate]]" title="Edith">
 <pre>
 [img[pictures/edith-cohen.jpg]]
 
 !!![[Eva]]:
 
-Edith is my [[half-sister|Eva`s family tree]]. She ran away from the Nahala a year before me, and we met only seven years ago (it's 2017 now). Meeting her again was one of the most wonderful things that had ever happened to me.
+Edith is my [[half-sister|Eva`s family tree]]. She ran away from the estate a year before me, and we met only seven years ago (it's 2017 now). Meeting her again was one of the most wonderful things that had ever happened to me.
 
 
  &lt;&lt;heblink [[אדית]]&gt;&gt;</pre>
@@ -10988,8 +10988,23 @@ they also said tape''
  &lt;&lt;heblink [[כוכב המשאלות 04]]&gt;&gt;
 </pre>
 </div>
-<div created="20200216174503612" modified="20200216174631485" tags="[[I would like to apologize]] [[The archive's trustees]] [[Coen sister]] Metafiction" title="With Yoyo in Amsterdam">
+<div created="20200216174503612" modified="20200217183441355" tags="[[I would like to apologize]] [[The archive's trustees]] [[Coen sister]] Metafiction" title="With Yoyo in Amsterdam">
 <pre>[img[pictures/amsterdam-im-yoyo.jpg]]
+
+!!![[Gura]]:
+
+In November 2016 [[Yoyo]] took me to Amsterdam, in order to help me letting go of [[June's events|Dandan went]].
+
+You can't come with resentment  to a person who went, it's permitted, to all sides involved. Yes, you should be decent, all sides, even the one that stays mad, you should be fair and decent- probably with yourself first.
+
+It was cold, we wandered a little, talked a lot, stayed near [[Vondlepark|https://en.wikipedia.org/wiki/Vondelpark]] and the museums' area. The only place I really wanted to visit is [[Van Gogh's museum|https://en.wikipedia.org/wiki/Van_Gogh_Museum]]. Apart from the painful pain that's noticeable in the paintings of dear [[Vincent|Vincent Van Gogh]], who sits and paints more and more, himself, his parents' house, the nature, the people and aches endlessly, it's been a while now that I'm jealous (in a good way) at the possibility of sending a message without the use of words.
+
+I've almost lost it for a few months, but our site saved me.
+
+In [[my name|Wyclef Jean]] and in [[Wyclef Jean's name|https://www.youtube.com/watch?v=kI6MWZrl8v8&amp;list=RDkI6MWZrl8v8]], escorted with worthy stringed instruments:
+
+//I wanna dedicate this song, Gone 'Til November... To all you ladies out there, crying all alone in your room And all you fellas, going down south...Not making it back... May the lord bless your soul, I love you girl//
+
 
 
  &lt;&lt;heblink [[עם יויו באמסטרדם]]&gt;&gt;
