--- a/english.html
+++ b/english.html
@@ -367,6 +367,8 @@ Error message and password prompt
 
 <li>Genevieve</li>
 
+<li>Gigi</li>
+
 <li>Guan Fashion</li>
 
 <li>Guan-yin</li>
@@ -8500,10 +8502,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20180915084635446" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20161023184709475" modified="20200217125807877" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20200217184218182" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200217183443922" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200217184320669" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8512,7 +8514,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[With Yoyo in Amsterdam]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9383,6 +9385,21 @@ Need a document? Need to send a fax? Need a business card? Need to scan? Need a 
 
  &lt;&lt;heblink [[ז'נבייב]]&gt;&gt;</pre>
 </div>
+<div created="20200217184337290" modified="20200217184926961" tags="[[The Baumans]] [[I would like to apologize]]" title="Gigi">
+<pre>
+[img[pictures/gigi.jpg]]
+
+!!![[Yoyo]]:
+
+Gigi is part of The [[Emin Society|https://en.wikipedia.org/wiki/Emin_(esoteric_movement)]]. She lives in Hod-Hasharon and she belongs to this odd community. She has two cats and a white Labrador. She has a house with a garden, she's a teacher at an elementary school, educator and all. She's really sweet, she has a good soul and she is very sad, that's how [[Gura]] and I call her with utter love, the sad one. In high school she had lots of pimples on her face, she withdrew into herself, was disciplined so nobody got into her business, she was sympatic and since then she's kind of an explorer, always studying more and more. She had some serious love affairs, with hot men actually, but she lives with the community who apparently fills up her life.
+
+
+
+ &lt;&lt;heblink [[גיגי]]&gt;&gt;
+
+
+</pre>
+</div>
 <div created="20200215203104172" modified="20200215203242855" tags="[[True stories]] Mothers" title="Guan Fashion">
 <pre>[img[pictures/guen-inn-mitpara.jpg]]
 
@@ -9865,7 +9882,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200217181750940" tags="[[Life according to Genevieve]] Kitchens" title="Love">
+<div created="20200202180428182" modified="20200217184900267" tags="[[Life according to Genevieve]] Kitchens" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
