--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[המטבח של הנחלה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217180431289" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217184359479" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9611,7 +9611,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200217181308156" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200217184958102" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -11644,14 +11644,14 @@ Is where I want to be
 סוף
 </pre>
 </div>
-<div created="20170401203113923" modified="20180125171935940" tags="[[משפחת באומן]] [[אני רוצה להתנצל]]" title="גיגי">
+<div created="20170401203113923" modified="20200217185023480" tags="[[משפחת באומן]] [[אני רוצה להתנצל]]" title="גיגי">
 <pre>[img[pictures/gigi.jpg]]
 
 !!![[יויו]]:
 
-גיגי היא חברה באימן. היא גרה בהוד השרון, והיא משתייכת לקהילה המשונה הזו. יש לה שני חתולים ולברדורית לבנה. יש לה בית עם גינה, היא מורה בבית ספר יסודי, מחנכת וכל זה. היא חמודה נורא, היא נשמה והיא נורא עצובה, ככה גורה ואני קוראים לה באהבה גמורה, העצובה. בתיכון היו לה המוני פצעים על הפנים, היא התכנסה בתוך עצמה, הייתה ממושמעת כך שמעולם לא היה על מה להלין בעניינה, היא הייתה סימפטית, ומאז היא מן חוקרת כזו, תמיד לומדת עוד ועוד. היו לה כמה רומנים רציניים בחיים, עם גברים שווים דווקא, אך היא חיה עם הקהילה שממלאה את חייה ככל הנראה.
+גיגי היא חברה [[באימן|https://en.wikipedia.org/wiki/Emin_(esoteric_movement)]]. היא גרה בהוד השרון, והיא משתייכת לקהילה המשונה הזו. יש לה שני חתולים ולברדורית לבנה. יש לה בית עם גינה, היא מורה בבית ספר יסודי, מחנכת וכל זה. היא חמודה נורא, היא נשמה והיא נורא עצובה, ככה גורה ואני קוראים לה באהבה גמורה, העצובה. בתיכון היו לה המוני פצעים על הפנים, היא התכנסה בתוך עצמה, הייתה ממושמעת כך שמעולם לא היה על מה להלין בעניינה, היא הייתה סימפטית, ומאז היא מן חוקרת כזו, תמיד לומדת עוד ועוד. היו לה כמה רומנים רציניים בחיים, עם גברים שווים דווקא, אך היא חיה עם הקהילה שממלאה את חייה ככל הנראה.
 
-</pre>
+&lt;&lt;englink [[Gigi]]&gt;&gt;</pre>
 </div>
 <div created="20180718190454440" modified="20200217145040636" tags="[[כאן בגטו]] [[בדרך לאן שהוא]]" title="גינת קריית ספר">
 <pre>[img[pictures/ginat-kiryat-sefer.jpg]]
