--- a/english.html
+++ b/english.html
@@ -289,6 +289,8 @@ Error message and password prompt
 
 <li>blue-marble-hood</li>
 
+<li>Bolognese-alike</li>
+
 <li>Cafe Müller</li>
 
 <li>Cat Sisters</li>
@@ -502,6 +504,8 @@ Error message and password prompt
 <li>Outer sisters</li>
 
 <li>Papa Yoel</li>
+
+<li>Passover Seder at Dad's and Tirza's</li>
 
 <li>Pedro Almodóvar</li>
 
@@ -8505,7 +8509,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217184218182" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200217184320669" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200217191019638" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8514,7 +8518,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="Bolognese-alike [[Passover Seder at Dad's and Tirza's]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8921,6 +8925,16 @@ The idea of the blue marble is the continuation of Iry's thoughts of [[the villa
 
 
  &lt;&lt;heblink [[blue-marble-hood]]&gt;&gt;</pre>
+</div>
+<div created="20200217191013013" modified="20200217192054207" tags="[[The team]] [[Food addicts]] Recipes [[Vegan recipes]]" title="Bolognese-alike">
+<pre>
+[img[pictures/cmolonez.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[כמולונז]]&gt;&gt;
+</pre>
 </div>
 <div created="20200216183951936" modified="20200216184242348" tags="HH" title="Cafe Müller">
 <pre>[img[pictures/cafe-muller.jpg]]
@@ -9882,7 +9896,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200217184900267" tags="[[Life according to Genevieve]] Kitchens" title="Love">
+<div created="20200202180428182" modified="20200217191501474" tags="[[Life according to Genevieve]] Kitchens" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -10199,6 +10213,18 @@ He did his best at raising [[us|The Baumans]] as good people, and in most cases 
 
 
  &lt;&lt;heblink [[אבא יואל]]&gt;&gt;</pre>
+</div>
+<div created="20200217185654348" modified="20200217190925890" tags="[[The Baumans]] Meals [[Food addicts]] [[The archive's trustees]]" title="Passover Seder at Dad's and Tirza's">
+<pre>
+[img[pictures/lel-haseder-ezel-aba.jpg]]
+
+!!![[Yoyo]]:
+
+[[Alfred]] stayed to watch over the house. [[Angelic]], [[Iry]], [[Gura]] and I went to make the parents happy. We enjoyed the beautiful spring and the nice breeze. Dad built a very nice shack in the garden. The whole family arrived, including Tirza's two sons. There was a lot of food and you could say without a doubt that the amount of vegans only grows bigger what made Tirza make [[Bolognese-alike]] which we adopted. 
+
+
+ &lt;&lt;heblink [[ליל הסדר אצל אבא ותרצה]]&gt;&gt;
+</pre>
 </div>
 <div created="20200215104941835" modified="20200215105450147" tags="Mothers Films [[Outer sisters]]" title="Pedro Almodóvar">
 <pre>[img[pictures/pedro-almodovar.jpg]]
