--- a/english.html
+++ b/english.html
@@ -8509,7 +8509,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217184218182" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200217191019638" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200217194331265" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8518,7 +8518,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Bolognese-alike [[Passover Seder at Dad's and Tirza's]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Genevieve [[The kitchen according to Genevieve]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8538,7 +8538,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217183248265" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217194200263" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9394,8 +9394,29 @@ Need a document? Need to send a fax? Need a business card? Need to scan? Need a 
 
 </pre>
 </div>
-<div created="20200213145354960" modified="20200213152652198" tags="[[Coen sister]] Mothers" title="Genevieve">
+<div created="20200213145354960" modified="20200217194256233" tags="[[Coen sister]] Mothers" title="Genevieve">
 <pre>[img[pictures/genevieve.jpg]]
+
+
+!!![[Yoyo]]:
+
+Genevieve, Genevieve Kilito, is [[the real cat|Cat Sisters]] of all of us. At first, she has a cat face. Her eyes are green-brown-yellow-blue depends on what she's wearing. She sniffs, the sauces mostly. She growls when it tastes good or when something passes under her moustache.
+
+She thread her upper lip hair, or to be more accurate her mother does. Her mom is the one that helped her to get a divorce, and establish the restaurant after her dad passed away, and she has two grown daughters, [[Alexandra]] and [[Rushell]].
+
+She never put courgettes in [[the couscous's soup|The Couscous]]. In my opinion courgettes are unnecessary vegetables.
+
+She has a shiny black hair.
+ 
+There is that saying, about cats doing only what's good for them, and when it gets bad they walk away. It's true that they leave when it gets worse, but what do they do when it's good? Maybe being loyal to themselves improves their loyal abilities?
+
+They can mispresent, but a clever cat won't.
+
+ She's a beautiful cat whose family emigrated from Morocco to Paris.
+
+She loves us and take care of us all. In the end of every working day she moves around and checks that everything is in order. Quickly she peeks at all corners even though she knows the rags in our hands won't miss a centimeter. And maybe, a thought suddenly pops into my head, she's just full of satisfaction, after she's down counting the cash, knowing [[she didn't study audit for nothing|The kitchen according to Genevieve]]. 
+
+
 
  &lt;&lt;heblink [[ז'נבייב]]&gt;&gt;</pre>
 </div>
@@ -9851,7 +9872,7 @@ Another [[neighborhood luck|https://www.google.co.il/maps/uv?hl=iw&amp;pb=!1s0x1
 
 </pre>
 </div>
-<div created="20200215225741395" modified="20200216144715940" tags="[[The kitchen according to Genevieve]] Kitchens" title="Less is more">
+<div created="20200215225741395" modified="20200217194325549" tags="Kitchens [[Life according to Genevieve]]" title="Less is more">
 <pre>[img[pictures/less-is-more.jpg]]
 
 !!![[Genevieve]]:
@@ -9896,7 +9917,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200217191501474" tags="[[Life according to Genevieve]] Kitchens" title="Love">
+<div created="20200202180428182" modified="20200217194410262" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -10718,7 +10739,7 @@ The grass after rain, is greenish green.
  &lt;&lt;heblink [[הדשא]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213161521882" modified="20200213161924497" tags="Meals Kitchens Recipes" title="The kitchen according to Genevieve">
+<div created="20200213161521882" modified="20200217194459727" tags="Meals Kitchens Recipes" title="The kitchen according to Genevieve">
 <pre>[img[pictures/genevieve-food.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[The kitchen according to Genevieve]]&quot;&gt;&gt;
