--- a/english.html
+++ b/english.html
@@ -573,6 +573,8 @@ Error message and password prompt
 
 <li>The Couscous</li>
 
+<li>The cups we're drinking from</li>
+
 <li>The estate</li>
 
 <li>The estate`s kitchen</li>
@@ -8518,7 +8520,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Genevieve [[The kitchen according to Genevieve]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8538,7 +8540,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217194200263" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217194827993" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9394,7 +9396,7 @@ Need a document? Need to send a fax? Need a business card? Need to scan? Need a 
 
 </pre>
 </div>
-<div created="20200213145354960" modified="20200217194256233" tags="[[Coen sister]] Mothers" title="Genevieve">
+<div created="20200213145354960" modified="20200217195521735" tags="[[Coen sister]] Mothers [[The kitchen according to Genevieve]]" title="Genevieve">
 <pre>[img[pictures/genevieve.jpg]]
 
 
@@ -9917,7 +9919,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200217194410262" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
+<div created="20200202180428182" modified="20200217195336251" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -10640,6 +10642,24 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 
  &lt;&lt;heblink [[הקוסקוס]]&gt;&gt;
 
+
+</pre>
+</div>
+<div created="20200217194809275" modified="20200217195503430" tags="Coffee [[Coffee shops]] [[The kitchen according to Genevieve]] Kitchens Houses" title="The cups we're drinking from">
+<pre>
+[img[pictures/sifley-cafe.jpg]]
+
+!!![[Genevieve]]:
+
+Lately most of my beautiful porcelain coffee cups that I had got broken, so I bought some new ones and I'm still trying.
+
+The cups we're drinking from are like customs:
+
+Sometimes I'm a yoga teacher, even though I'm not a fan of glaze taste. Sometimes a Siberian peasant who got a blue service as a part of a dowry, and sometimes I'm a Spanish man with a moustache.
+
+
+
+ &lt;&lt;heblink [[הספלים מהם אנו שותים]]&gt;&gt;
 
 </pre>
 </div>
