--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ההיררכיה במקרר]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217195002880" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217200944011" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9611,7 +9611,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200217195155179" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200217201422698" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -12272,7 +12272,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170514230844769" modified="20170514232328726" tags="[[המטבח על פי ז'נבייב]]" title="ההיררכיה במקרר">
+<div created="20170514230844769" modified="20200217201449163" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="ההיררכיה במקרר">
 <pre>[img[pictures/bamekarer.jpg]]
 
 !!![[ז'נבייב]]:
@@ -12281,7 +12281,10 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 ככל שיורדים במדפים, זה הולך ונהיה פחות נעים. ירקות, תבשילים, בשר - למרות טעמם הטעים.
 
-כי זה לא נורא אם נשפך קצת רוטב פירות יער על הבשר, אבל זה בלתי הפיך, אם הרוטב של הבשר נשפך על העוגות.</pre>
+כי זה לא נורא אם נשפך קצת רוטב פירות יער על הבשר, אבל זה בלתי הפיך, אם הרוטב של הבשר נשפך על העוגות.
+
+&lt;&lt;englink [[The hierarchy in the refrigerator]]&gt;&gt;
+</pre>
 </div>
 <div created="20171203184626572" modified="20171204145912653" tags="[[אירי וגורה]]" title="ההמשך של כוכב המשאלות">
 <pre>[img[pictures/hemshech-cochav.jpg]]
