--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ההיררכיה במקרר]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[שיח קפה]] [[ההיררכיה במקרר]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217200944011" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217202113734" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9611,7 +9611,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200217201422698" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200217202231556" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -18533,13 +18533,15 @@ Fapina''
 
 שי טרא ליטמן הוא [[עלם חמודות|https://www.youtube.com/watch?v=_awp-5mjewA]], הוא [[נער אומן|https://www.youtube.com/watch?v=krTGi51osmI]], הוא [[חזק בחלשותו|https://www.youtube.com/watch?v=g2VEAqm_8cU]], הוא [[כשרוני וחכם|https://www.youtube.com/watch?v=5QhE_JMvrDg]], כותב שר ומתנועע עם טיימינג מושלם, הוא [[קטלן בכריזמה|https://www.youtube.com/watch?v=J1aTFmOlYE4]], הוא שי טרא ליטמן אהוב עולם.</pre>
 </div>
-<div created="20180726193443645" modified="20190415192648960" tags="[[כאן בגטו]] קפה [[בתי קפה]]" title="שיח קפה">
+<div created="20180726193443645" modified="20200217202254414" tags="[[כאן בגטו]] קפה [[בתי קפה]]" title="שיח קפה">
 <pre>[img[pictures/siach-cafe.jpg]]
 
 !!![[תומר]]: 
 
 אחרי [[שורצקי]], עוד קצת במורד הרחוב, אני קונה קפה ששרלי, שיודע את שפתם של הפולים, קלה וטחן בשינקין 50. 
 
+
+&lt;&lt;englink [[Siach Cafe]]&gt;&gt;
 </pre>
 </div>
 <div created="20161206222443036" modified="20170907165207735" tags="[[אירי טוענת]]" title="שיטת אלכסנדר">
