--- a/english.html
+++ b/english.html
@@ -547,6 +547,8 @@ Error message and password prompt
 
 <li>Shoretzky</li>
 
+<li>Siach Cafe</li>
+
 <li>Single parent children</li>
 
 <li>Six feet uner</li>
@@ -8522,7 +8524,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The hierarchy in the refrigerator]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9921,7 +9923,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200217201309719" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
+<div created="20200202180428182" modified="20200217202347677" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -10492,6 +10494,17 @@ Out of the really nearby radius, on the other side of the boulevard, on the hill
 
  &lt;&lt;heblink [[שורצקי]]&gt;&gt;
 
+</pre>
+</div>
+<div created="20200217201929999" modified="20200217202412454" tags="Coffee [[Coffee shops]] [[Here in the Ghetto]]" title="Siach Cafe">
+<pre>
+[img[pictures/siach-cafe.jpg]]
+
+!!![[Tomer]]:
+
+After Shoretzky, a little bit down the road, I buy coffee that Sharli, who knows the language of coffee beans, toasted and grinded at 50 Sheinkinst.
+
+ &lt;&lt;heblink [[שיח קפה]]&gt;&gt;
 </pre>
 </div>
 <div created="20200212222159882" modified="20200215134519589" tags="[[True stories]] Children" title="Single parent children">
