--- a/english.html
+++ b/english.html
@@ -509,6 +509,8 @@ Error message and password prompt
 
 <li>Pedro Almodóvar</li>
 
+<li>Perfectionism or OCD</li>
+
 <li>Philipp</li>
 
 <li>Pina Bausch</li>
@@ -8515,7 +8517,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217184218182" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200217202818872" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200217203659795" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8524,7 +8526,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Coffee [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8544,7 +8546,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217202738529" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217203704370" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9930,7 +9932,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200217202347677" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
+<div created="20200202180428182" modified="20200217203721957" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -10272,6 +10274,18 @@ I’ve tried to paint Pedro Almodóva from [[this photo|https://www.indiewire.co
 
 
 </pre>
+</div>
+<div created="20200217203006778" modified="20200217203753371" tags="[[Monkeys with car keys]]" title="Perfectionism or OCD">
+<pre>
+[img[pictures/spiritual-level.jpg]]
+
+
+!!![[Yoyo]]:
+
+Sometimes I ask myself, do you have a [[spirit level|https://en.wikipedia.org/wiki/Spirit_level]] instead of a [[third eye|https://en.wikipedia.org/wiki/Third_eye]] or is it an [[obsessive–compulsive disorder|https://en.wikipedia.org/wiki/Obsessive%E2%80%93compulsive_disorder]]? It's not only that I have to straighten things all the time, and things have to be in the angle I want. I almost always plan, I almost always [[misenplate|Misenplation]], I'm worried about things I've said or haven't said. There's a thin line between perfectionism and OCD, and lately I've discovered there's a thing called legit OCD, and how glad was I. 
+
+
+ &lt;&lt;heblink [[ יסודי או ocd ]]&gt;&gt;</pre>
 </div>
 <div created="20200212172521280" modified="20200216144216938" tags="[[Coen sister]]" title="Philipp">
 <pre>[img[pictures/phillip.jpg]]
