--- a/english.html
+++ b/english.html
@@ -10517,13 +10517,13 @@ Out of the really nearby radius, on the other side of the boulevard, on the hill
 
 </pre>
 </div>
-<div created="20200217201929999" modified="20200217202412454" tags="Coffee [[Coffee shops]] [[Here in the Ghetto]]" title="Siach Cafe">
+<div created="20200217201929999" modified="20200217204221525" tags="Coffee [[Coffee shops]] [[Here in the Ghetto]]" title="Siach Cafe">
 <pre>
 [img[pictures/siach-cafe.jpg]]
 
 !!![[Tomer]]:
 
-After Shoretzky, a little bit down the road, I buy coffee that Sharli, who knows the language of coffee beans, toasted and grinded at 50 Sheinkinst.
+After [[Shoretzky]], a little bit down the road, I buy coffee that Sharli, who knows the language of coffee beans, toasted and grinded at 50 Sheinkinst.
 
  &lt;&lt;heblink [[שיח קפה]]&gt;&gt;
 </pre>
