--- a/index.html
+++ b/index.html
@@ -9175,7 +9175,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217150815393" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200217180854191" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200217204519749" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[יסודי או ocd]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217203126561" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217204332949" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -15696,8 +15696,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Recipes]]&gt;&gt;
 </pre>
 </div>
-<div created="20180107120555995" modified="20200215220751021" tags="[[חיות אוכל]] ארוחות הצוות מתכונים מטבחים [[כמה שירים כבר אפשר להמציא בכלל]]" title="מתכונים טבעוניים">
+<div created="20180107120555995" modified="20200217204514924" tags="[[חיות אוכל]] ארוחות הצוות מתכונים מטבחים [[כמה שירים כבר אפשר להמציא בכלל]]" title="מתכונים טבעוניים">
 <pre>[img[pictures/vegan.jpg]]
+
+!!![[הצוות]]:
 
 חיות המשק המומות לטובה
 
