--- a/english.html
+++ b/english.html
@@ -457,6 +457,8 @@ Error message and password prompt
 
 <li>Marianne</li>
 
+<li>Materials</li>
+
 <li>Matza balls soup</li>
 
 <li>Meals</li>
@@ -8526,7 +8528,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Monkeys with car keys]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8546,7 +8548,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217204310656" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217211916663" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9932,7 +9934,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200217203721957" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
+<div created="20200202180428182" modified="20200217211943172" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -9963,6 +9965,35 @@ For example, it seethes me when people use words purposelessly, like the word lo
  
  &lt;&lt;heblink [[מריאן]]&gt;&gt;
 </pre>
+</div>
+<div created="20200217205455825" modified="20200217205946501" tags="[[The kitchen according to Genevieve]] Coffee Kitchens [[Food addicts]]" title="Materials">
+<pre>
+[img[pictures/chomarim.jpg]]
+
+!!![[Genevieve]]:
+ 
+Actually, what's important with the materials that assemble the tools we work with, or with the materials that assemble our worktops, is that they should affect as little as possible on the raw materials that are used for cooking.
+I really like working on marble, it's cold and smooth. Doughs, relatively, don't get stuck to it. Stainless steel also fits to be used as a worktop, but in my opinion it works better for the sink and shelves area. 
+
+For stirring the food, wooden spoons are preferred. For scrambling mixtures, a stainless steel manual mixer. 
+For short cooking I prefer stainless steel, for long cooking heavy casted iron.  Also for roasting iron fits. There are the fans of copper cooking pots, but in my opinion they secrete a bad taste.
+
+At the café in front of Yoyo's and Gura's apartment, there is a water faucet made out of copper, and it's terrible to be needed to drink water there. 
+For baking I like pyrex, also for storing the food I prefer pyrex. Glass bowls are ideals for mixing salads and for many things, and also stainless bowls. 
+
+I serve the couscous portion in ceramic bowls, which I buy every time I see some I like. One or two of each kind, not necessarily hand made. 
+
+The ceramics leave tastes but it mostly minor 
+On my behalf:
+
+Cutlery- not under any circumstances should it be silver, that brings its unnecessary taste, and surely not from cheap metal, that probably leaves precipitations in the inner surroundings
+For light drinks and booze- glass
+For coffee- thin and not thick ceramic cups
+And tea is for the sicken ones. 
+
+
+
+ &lt;&lt;heblink [[חומרים]]&gt;&gt;</pre>
 </div>
 <div created="20200215115312612" modified="20200215115447306" tags="Recipes [[Food addicts]] Meals" title="Matza balls soup">
 <pre>[img[pictures/marak-im-kneydalach.jpg]]
@@ -10051,8 +10082,21 @@ The [[Miznon|https://miznon.com/]] that's in the picture is on 30 King George, n
 
 </pre>
 </div>
-<div created="20200202190317522" modified="20200217121326899" tags="[[TV Series]] TV [[The global village]]" title="Monkeys with car keys">
+<div created="20200202190317522" modified="20200217211913122" tags="[[TV Series]] TV [[The global village]]" title="Monkeys with car keys">
 <pre>[img[pictures/kofim-memunaim.jpg]]
+
+
+!!![[Yoyo]]:
+
+This sentence was said, by Woody Ellen's mother allegedly, to [[Ed|https://www.imdb.com/name/nm0123261/?ref_=nm_mv_close]] on [[Northern Exposure]] TV show [[(third season fourth episode)|https://www.imdb.com/title/tt0662321/]].
+
+As a [[Coen sister]], my DNA carries, I suppose, several passers-by- maybe [[Cossacks|https://en.wikipedia.org/wiki/Cossacks]], maybe [[Tatars|https://en.wikipedia.org/wiki/Tatars]], maybe [[Vikings|https://en.wikipedia.org/wiki/Vikings]], [[Phoenicians|https://en.wikipedia.org/wiki/Phoenicia]], [[Jebusite|https://en.wikipedia.org/wiki/Jebusite]], [[Huns|https://en.wikipedia.org/wiki/Huns]] and the rest of them. 
+
+As a [[Homo sapiens|https://en.wikipedia.org/wiki/Homo_sapiens]] there is a chance that in my DNA there is an unknown amount of [[Neanderthal|https://en.wikipedia.org/wiki/Neanderthal]] or [[Australopithecus|https://en.wikipedia.org/wiki/Australopithecus]], not to mention [[Orrorin tugenensis|https://en.wikipedia.org/wiki/Orrorin]] genome remains, and who knows what else?
+
+All of us are us, and we are [[us|https://i.pinimg.com/236x/c3/7a/64/c37a645d3911729deef9f23354ce32bc--northern-exposure-car-keys.jpg]], who walk together along the road, yipi-ka-yay.
+ 
+I am too, even though I use [[public transportation|Public Transportation]], still holding a car key in my hand and asking myself, what am I?
 
 
 &lt;&lt;list-links filter:&quot;[tag[Monkeys with car keys]]&quot;&gt;&gt;
@@ -10275,7 +10319,7 @@ I’ve tried to paint Pedro Almodóva from [[this photo|https://www.indiewire.co
 
 </pre>
 </div>
-<div created="20200217203006778" modified="20200217203753371" tags="[[Monkeys with car keys]]" title="Perfectionism or OCD">
+<div created="20200217203006778" modified="20200217212212768" tags="[[Monkeys with car keys]]" title="Perfectionism or OCD">
 <pre>
 [img[pictures/spiritual-level.jpg]]
 
@@ -10285,7 +10329,7 @@ I’ve tried to paint Pedro Almodóva from [[this photo|https://www.indiewire.co
 Sometimes I ask myself, do you have a [[spirit level|https://en.wikipedia.org/wiki/Spirit_level]] instead of a [[third eye|https://en.wikipedia.org/wiki/Third_eye]] or is it an [[obsessive–compulsive disorder|https://en.wikipedia.org/wiki/Obsessive%E2%80%93compulsive_disorder]]? It's not only that I have to straighten things all the time, and things have to be in the angle I want. I almost always plan, I almost always [[misenplate|Misenplation]], I'm worried about things I've said or haven't said. There's a thin line between perfectionism and OCD, and lately I've discovered there's a thing called legit OCD, and how glad was I. 
 
 
- &lt;&lt;heblink [[ יסודי או ocd ]]&gt;&gt;</pre>
+ &lt;&lt;heblink [[ocd יסודי או]]&gt;&gt;</pre>
 </div>
 <div created="20200212172521280" modified="20200216144216938" tags="[[Coen sister]]" title="Philipp">
 <pre>[img[pictures/phillip.jpg]]
