--- a/english.html
+++ b/english.html
@@ -8528,7 +8528,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Perfectionism or OCD]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9966,7 +9966,7 @@ For example, it seethes me when people use words purposelessly, like the word lo
  &lt;&lt;heblink [[מריאן]]&gt;&gt;
 </pre>
 </div>
-<div created="20200217205455825" modified="20200217205946501" tags="[[The kitchen according to Genevieve]] Coffee Kitchens [[Food addicts]]" title="Materials">
+<div created="20200217205455825" modified="20200217215926258" tags="[[The kitchen according to Genevieve]] Coffee Kitchens [[Food addicts]]" title="Materials">
 <pre>
 [img[pictures/chomarim.jpg]]
 
@@ -9983,12 +9983,16 @@ For baking I like pyrex, also for storing the food I prefer pyrex. Glass bowls a
 
 I serve the couscous portion in ceramic bowls, which I buy every time I see some I like. One or two of each kind, not necessarily hand made. 
 
-The ceramics leave tastes but it mostly minor 
+The ceramics leave tastes but it mostly minor
+ 
 On my behalf:
 
 Cutlery- not under any circumstances should it be silver, that brings its unnecessary taste, and surely not from cheap metal, that probably leaves precipitations in the inner surroundings
+
 For light drinks and booze- glass
+
 For coffee- thin and not thick ceramic cups
+
 And tea is for the sicken ones. 
 
 
@@ -10319,7 +10323,7 @@ I’ve tried to paint Pedro Almodóva from [[this photo|https://www.indiewire.co
 
 </pre>
 </div>
-<div created="20200217203006778" modified="20200217213514512" tags="[[Monkeys with car keys]]" title="Perfectionism or OCD">
+<div created="20200217203006778" modified="20200217215723272" tags="[[Monkeys with car keys]]" title="Perfectionism or OCD">
 <pre>
 [img[pictures/spiritual-level.jpg]]
 
@@ -10839,7 +10843,7 @@ The grass after rain, is greenish green.
  &lt;&lt;heblink [[הדשא]]&gt;&gt;
 </pre>
 </div>
-<div created="20200217200909473" modified="20200217201347553" tags="[[The kitchen according to Genevieve]] Kitchens" title="The hierarchy in the refrigerator">
+<div created="20200217200909473" modified="20200217220150111" tags="[[The kitchen according to Genevieve]] Kitchens" title="The hierarchy in the refrigerator">
 <pre>
 [img[pictures/bamekarer.jpg]]
 
@@ -10847,6 +10851,7 @@ The grass after rain, is greenish green.
 !!![[Genevieve]]:
 
 In the refrigerator- up goes everything that's sweet, packed, neutral –such as- yogurts, butter, cakes, jams, cheese.
+
  
 As you go down in the shelves, it becomes less pleasant. Vegetables, casseroles, meat- even their tasty taste.
 
